updated bugs api, updated link relations